modified:   _posts/2023-11-23-maus.md 	modified:   _posts/2023-11-24-impacto-de-la-novela-grafica-maus.md 	modified:   _posts/2024-01-31-cold-war.md

--- a/_posts/2024-01-31-cold-war.md
+++ b/_posts/2024-01-31-cold-war.md
@@ -63,3 +63,5 @@ Post-WWII, African colonies gained independence, with several adopting communism
 [↪ See the shortfilm here.](https://docs.google.com/presentation/d/1BO6yGxw_oS_g-zPiZHPendXRCkWhghLS16G4IV9zvp0/edit?usp=sharing)
 
 [↪ Read the script here.](https://docs.google.com/document/d/1iJ-Bdz__FOOT235SJ50qwTHBkzG8t2ozMfNj3Sbg0yU/edit?usp=sharing)
+
+<!--End of file-->
