modified:   _posts/2024-01-31-cold-war.md

--- a/_posts/2024-01-31-cold-war.md
+++ b/_posts/2024-01-31-cold-war.md
@@ -3,7 +3,7 @@ layout: post
 title: Cold War
 description: Cold War
 summary: Comming Soon...
-tags: English, History
+tags: English History
 minute: \!10"
 ---
 
@@ -11,7 +11,7 @@ minute: \!10"
 
 In the aftermath of the war, the Soviet military and economy experienced a significant downturn, grappling with the destruction of their factories and cities. In contrast, the United States remained unscathed by a postwar crisis, as the war had spared American land, positioning the U.S. as the dominant nation after the European War. Following the Yalta and Potsdam Conferences, where Germany and Berlin were divvied up among the allies, the Soviets initiated the spread of communism.
 
-> Joseph Stalin's 1946 declared that:\
+> **Joseph Stalin's 1946 declared that:**\
 > Communism and capitalism could not peacefully coexist.
 
 The expansion of communism unfolded with the Soviets raising an imposing "iron curtain" across Europe, blocking travel and migration as a defensive strategy mitigating potential invasion. Concurrently, the Soviet communist regime extended its influence into Poland, Czechoslovakia, and Hungary, raising concerns among Americans. In response, U.S. President Truman laid out the Truman Doctrine, articulating plans to economically support countries targeted by the Soviets.
